add some touch events

--- a/index.html
+++ b/index.html
@@ -43,14 +43,16 @@
             <div class="content">
               <div class="buff-left"></div>
               <div class="content-inner">
-                <div>
-                  <img src="https://i.pravatar.cc/200?1" class="avatar" />
-                </div>
-                <div class="channel">
-                  <div class="title">Riku 🚀</div>
-                  <div>You</div>
-                  <div class="message">
-                    veikkaan, että tosi iso iso sellasesta "native-fe...
+                <div class="content-wrapper">
+                  <div>
+                    <img src="https://i.pravatar.cc/200?1" class="avatar" />
+                  </div>
+                  <div class="channel">
+                    <div class="title">Riku 🚀</div>
+                    <div>You</div>
+                    <div class="message">
+                      veikkaan, että tosi iso iso sellasesta "native-fe...
+                    </div>
                   </div>
                 </div>
               </div>
