add opening backdrop

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       <nav>
         <div class="item">All Chats</div>
       </nav>
-      <ul>
+      <ul class="chats">
         <li id="0">
           <div class="actions">
             <div class="actions-left">
@@ -62,6 +62,26 @@
         </li>
       </ul>
     </section>
+    <div id="overlay" class="overlay">
+      <div class="overlay-content">
+        <div class="chat-preview">
+          <div class="chat-preview-header">
+            <div class="chat-preview-title">Rare</div>
+            <div class="chat-preview-members">11 members</div>
+          </div>
+          <div class="chat-preview-content"></div>
+        </div>
+        <div class="overlay-actions">
+          <ul>
+            <li>Add to Folder</li>
+            <li>Mark as Unread</li>
+            <li>Pin</li>
+            <li>Unmute</li>
+            <li>Delete</li>
+          </ul>
+        </div>
+      </div>
+    </div>
     <script type="module" src="/src/my-element.ts"></script>
   </body>
 </html>
