closing animations for overlay, long press for it to open

--- a/index.html
+++ b/index.html
@@ -8,10 +8,7 @@
       content="black-translucent"
     />
     <link rel="icon" type="image/svg+xml" href="src/favicon.svg" />
-    <script
-      defer
-      src="https://unpkg.com/smoothscroll-polyfill@0.4.4/dist/smoothscroll.min.js"
-    ></script>
+    <script src="https://unpkg.com/smoothscroll-polyfill@0.4.4/dist/smoothscroll.min.js"></script>
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1.0, maximum-scale=1.0,
