imitate native stretching action buttons

--- a/index.html
+++ b/index.html
@@ -29,11 +29,17 @@
         <li id="0">
           <div class="actions">
             <div class="actions-left">
-              <button class="unread">Unread</button>
-              <button class="pin">Pin</button>
+              <button class="unread">
+                <div class="button-content">Unread</div>
+              </button>
+              <button class="pin">
+                <div class="button-content">Pin</div>
+              </button>
             </div>
             <div class="actions-right">
-              <button class="delete">Delete</button>
+              <button class="delete">
+                <div class="button-content">Delete</div>
+              </button>
             </div>
           </div>
           <div class="content-container">
