implement chat popping from above when list is stretched

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
     <title>Vite + Lit-Element App</title>
   </head>
   <body ontouchstart="">
-    <header>Chats</header>
-    <section>
+    <header id="title">Chats</header>
+    <section id="scroller">
       <div class="search">
         <input type="text" placeholder="🔍 Search for messages or users" />
       </div>
