use css transforms for showing archived

--- a/index.html
+++ b/index.html
@@ -48,11 +48,48 @@
               <div class="content-inner">
                 <div class="content-wrapper">
                   <div>
+                    <img src="https://via.placeholder.com/150" class="avatar" />
+                  </div>
+                  <div class="channel">
+                    <div class="title">Archived Chats</div>
+                    <div class="message">
+                      Hey there, <br />
+                      foo bar baz...
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="buff-right"></div>
+            </div>
+          </div>
+        </li>
+        <li id="0">
+          <div class="actions">
+            <div class="actions-left">
+              <button class="unread">
+                <div class="button-content">Unread</div>
+              </button>
+              <button class="pin">
+                <div class="button-content">Pin</div>
+              </button>
+            </div>
+            <div class="actions-right">
+              <button class="delete">
+                <div class="button-content">Delete</div>
+              </button>
+            </div>
+          </div>
+          <div class="content-container">
+            <div class="content">
+              <div class="buff-left"></div>
+              <div class="content-inner">
+                <div class="content-wrapper">
+                  <div>
                     <img src="https://i.pravatar.cc/110?1" class="avatar" />
                   </div>
                   <div class="channel">
                     <div class="title">Riku 🚀</div>
-                    <div>You</div>
+                    <div class="sender">You</div>
                     <div class="message">
                       veikkaan, että tosi iso iso sellasesta "native-fe...
                     </div>
