add button icons

--- a/index.html
+++ b/index.html
@@ -30,10 +30,61 @@
           <div class="actions">
             <div class="actions-left">
               <button class="unread">
-                <div class="button-content">Unread</div>
+                <div class="button-content">
+                  <svg
+                    viewBox="0 0 315 305"
+                    fill="none"
+                    xmlns="http://www.w3.org/2000/svg"
+                  >
+                    <path
+                      d="M268.229 36.587C298.39 60.54 315 92.541 315 126.696C315 160.851 298.39 192.852 268.228 216.806C238.576 240.356 199.251 253.325 157.499 253.325C153.761 253.325 149.975 253.215 146.186 252.997C140.749 267.02 131.396 279.506 119.414 288.601C105.339 299.286 88.564 304.933 70.902 304.933C67.876 304.933 65.145 303.113 63.98 300.319C62.815 297.525 63.444 294.304 65.574 292.154C79.404 278.193 86.349 258.579 84.579 238.985C60.36 228.817 39.823 213.751 24.985 195.225C8.64 174.817 0 151.12 0 126.696C0 92.541 16.609 60.54 46.769 36.587C76.42 13.037 115.746 0.0679932 157.5 0.0679932C199.251 0.0679932 238.576 13.037 268.229 36.587Z"
+                      fill="white"
+                    />
+                  </svg>
+
+                  Unreads
+                </div>
               </button>
               <button class="pin">
-                <div class="button-content">Pin</div>
+                <div class="button-content">
+                  <svg
+                    version="1.1"
+                    id="Capa_1"
+                    xmlns="http://www.w3.org/2000/svg"
+                    xmlns:xlink="http://www.w3.org/1999/xlink"
+                    x="0px"
+                    y="0px"
+                    viewBox="0 0 489.493 489.493"
+                    style="enable-background: new 0 0 489.493 489.493"
+                    xml:space="preserve"
+                  >
+                    <path
+                      d="M485.322,117.705c12.204-12.238-3.274-47.577-34.636-78.93c-30.99-30.99-65.76-46.396-78.401-34.941l-0.246-0.236
+	l-173.715,156.02c-32.117-27.993-80.684-27.038-111.278,3.534c-5.149,5.157-8.051,12.146-8.051,19.437
+	c0,7.292,2.901,14.283,8.051,19.431l78.808,78.801L3.902,463.627c-5.148,5.799-5.262,14.655,0.015,20.601
+	c5.689,6.403,15.497,6.992,21.916,1.294l182.575-162.137l7.84,7.829l40.601,40.603l0,0l30.336,30.329
+	c5.15,5.147,12.139,8.039,19.424,8.039c7.278,0,14.272-2.898,19.419-8.056c30.561-30.573,31.524-79.158,3.539-111.27L484.771,118.03
+	C484.927,117.892,485.177,117.861,485.322,117.705z"
+                    />
+                    <g></g>
+                    <g></g>
+                    <g></g>
+                    <g></g>
+                    <g></g>
+                    <g></g>
+                    <g></g>
+                    <g></g>
+                    <g></g>
+                    <g></g>
+                    <g></g>
+                    <g></g>
+                    <g></g>
+                    <g></g>
+                    <g></g>
+                  </svg>
+
+                  Pin
+                </div>
               </button>
             </div>
             <div class="actions-right">
@@ -67,10 +118,61 @@
           <div class="actions">
             <div class="actions-left">
               <button class="unread">
-                <div class="button-content">Unread</div>
+                <div class="button-content">
+                  <svg
+                    viewBox="0 0 315 305"
+                    fill="none"
+                    xmlns="http://www.w3.org/2000/svg"
+                  >
+                    <path
+                      d="M268.229 36.587C298.39 60.54 315 92.541 315 126.696C315 160.851 298.39 192.852 268.228 216.806C238.576 240.356 199.251 253.325 157.499 253.325C153.761 253.325 149.975 253.215 146.186 252.997C140.749 267.02 131.396 279.506 119.414 288.601C105.339 299.286 88.564 304.933 70.902 304.933C67.876 304.933 65.145 303.113 63.98 300.319C62.815 297.525 63.444 294.304 65.574 292.154C79.404 278.193 86.349 258.579 84.579 238.985C60.36 228.817 39.823 213.751 24.985 195.225C8.64 174.817 0 151.12 0 126.696C0 92.541 16.609 60.54 46.769 36.587C76.42 13.037 115.746 0.0679932 157.5 0.0679932C199.251 0.0679932 238.576 13.037 268.229 36.587Z"
+                      fill="white"
+                    />
+                  </svg>
+
+                  Unreads
+                </div>
               </button>
               <button class="pin">
-                <div class="button-content">Pin</div>
+                <div class="button-content">
+                  <svg
+                    version="1.1"
+                    id="Capa_1"
+                    xmlns="http://www.w3.org/2000/svg"
+                    xmlns:xlink="http://www.w3.org/1999/xlink"
+                    x="0px"
+                    y="0px"
+                    viewBox="0 0 489.493 489.493"
+                    style="enable-background: new 0 0 489.493 489.493"
+                    xml:space="preserve"
+                  >
+                    <path
+                      d="M485.322,117.705c12.204-12.238-3.274-47.577-34.636-78.93c-30.99-30.99-65.76-46.396-78.401-34.941l-0.246-0.236
+	l-173.715,156.02c-32.117-27.993-80.684-27.038-111.278,3.534c-5.149,5.157-8.051,12.146-8.051,19.437
+	c0,7.292,2.901,14.283,8.051,19.431l78.808,78.801L3.902,463.627c-5.148,5.799-5.262,14.655,0.015,20.601
+	c5.689,6.403,15.497,6.992,21.916,1.294l182.575-162.137l7.84,7.829l40.601,40.603l0,0l30.336,30.329
+	c5.15,5.147,12.139,8.039,19.424,8.039c7.278,0,14.272-2.898,19.419-8.056c30.561-30.573,31.524-79.158,3.539-111.27L484.771,118.03
+	C484.927,117.892,485.177,117.861,485.322,117.705z"
+                    />
+                    <g></g>
+                    <g></g>
+                    <g></g>
+                    <g></g>
+                    <g></g>
+                    <g></g>
+                    <g></g>
+                    <g></g>
+                    <g></g>
+                    <g></g>
+                    <g></g>
+                    <g></g>
+                    <g></g>
+                    <g></g>
+                    <g></g>
+                  </svg>
+
+                  Pin
+                </div>
               </button>
             </div>
             <div class="actions-right">
