Add random messages & titles

--- a/index.html
+++ b/index.html
@@ -3,10 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="manifest" href="/app.manifest" />
-    <meta
-      name="apple-mobile-web-app-status-bar-style"
-      content="black-translucent"
-    />
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
     <link rel="icon" type="image/svg+xml" href="src/favicon.svg" />
     <script src="https://unpkg.com/smoothscroll-polyfill@0.4.4/dist/smoothscroll.min.js"></script>
     <meta
@@ -63,7 +60,7 @@
             </div>
           </div>
         </li>
-        <li id="0">
+        <li id="0" class="hidden">
           <div class="actions">
             <div class="actions-left">
               <button class="unread">
@@ -88,11 +85,9 @@
                     <img src="https://i.pravatar.cc/110?1" class="avatar" />
                   </div>
                   <div class="channel">
-                    <div class="title">Riku 🚀</div>
+                    <div class="title"></div>
                     <div class="sender">You</div>
-                    <div class="message">
-                      veikkaan, että tosi iso iso sellasesta "native-fe...
-                    </div>
+                    <div class="message"></div>
                   </div>
                 </div>
               </div>
